[gd_scene load_steps=8 format=2]

[ext_resource path="res://spaceship/SpaceShip.gd" type="Script" id=1]
[ext_resource path="res://assets/spaceship2.svg" type="Texture" id=2]
[ext_resource path="res://assets/fire.svg" type="Texture" id=3]
[ext_resource path="res://assets/fire2.svg" type="Texture" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -50, 42, 10, 42, 50, -42, 50, -42, 10, 0, -50 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "max",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "min",
"speed": 5.0
} ]

[node name="SpaceShip" type="Area2D"]
position = Vector2( 495.189, 287.039 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
acceleration = 2

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.23, 0.23 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BlastTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="FireMax" type="AnimatedSprite" parent="."]
position = Vector2( 0, 81.3727 )
scale = Vector2( 0.15, 0.23 )
frames = SubResource( 2 )
animation = "max"

[node name="FireMin" type="AnimatedSprite" parent="."]
position = Vector2( 0, 81.3728 )
scale = Vector2( 0.1, 0.23 )
frames = SubResource( 3 )
animation = "min"
playing = true

[node name="FireLeft" type="Sprite" parent="."]
position = Vector2( -39.0469, 58.4062 )
scale = Vector2( 0.03, 0.07 )
texture = ExtResource( 3 )

[node name="FireRight" type="Sprite" parent="."]
position = Vector2( 39.1953, 57.6797 )
scale = Vector2( 0.03, 0.07 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_SpaceShip_body_entered"]
[connection signal="timeout" from="BlastTimer" to="." method="_on_BlastTimer_timeout"]
